kubernetes/db_depl.yaml
# This is db webdis deployment
# kubectl create -f db_depl.yaml
# kubectl expose deployment db --type=LoadBalancer --port=7379
# sudo minikube service db --url
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webdis
  template:
    metadata:
      labels:
        app: webdis
    spec:
      containers:
      - name: webdis
        image: nicolas/webdis:latest
        ports:
        - containerPort: 7379
