kubernetes/predict_depl.yaml
# deploy webdis
# kubectl create -f predict_depl.yaml
# kubectl get deployment
# kubectl describe deployment predict
# kubectl expose deployment predict --type=LoadBalancer --port=8081

apiVersion: apps/v1
kind: Deployment
metadata:
  name: predict
spec:
  replicas: 2
  selector:
    matchLabels:
      app: predict
  template:
    metadata:
      labels:
        app: predict
    spec:
      containers:
      - name: predict
        image: module_predict
        ports:
        - containerPort: 8081
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: predict-svc
spec:
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: predict
  type: LoadBalancer
