kubernetes/weather_depl.yaml
# deploy webdis
# kubectl create -f weather_depl.yaml
# kubectl get deployment
# kubectl describe deployment predict
# kubectl expose deployment weather --type=LoadBalancer --port=8081

apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather
spec:
  replicas: 2
  selector:
    matchLabels:
      app: weather
  template:
    metadata:
      labels:
        app: weather
    spec:
      containers:
      - name: weather
        image: module_weather
        ports:
        - containerPort: 8081
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: weather-svc
spec:
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: weather
  type: LoadBalancer
